// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportChart Component using Snapshot renders correctly with one data entry: one data entry 1`] = `
<DocumentFragment>
  <div
    class="flex-1 min-w-[300px] p-4 border border[1px] bg-black/15 dark:bg-[#1c1c1c] rounded-lg h-[350px] relative"
    id="chart-1"
  >
    <div
      class="flex justify-between items-center mb-4"
    >
      <h3
        class="text-center text-xl text-black dark:text-white flex-1"
      >
        One project
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:text-accent-foreground h-8 w-8 hover:bg-transparent dark:hover:bg-gray-700"
          title="Download as CSV"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4 text-black dark:text-gray-400 dark:hover:text-white m-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <line
              x1="10"
              x2="8"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:text-accent-foreground h-8 w-8 hover:bg-transparent dark:hover:bg-gray-700"
          title="Download as PNG"
        >
          <svg
            class="lucide lucide-image h-4 w-4 text-black dark:text-gray-400 dark:hover:text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      data-testid="responsive-container"
    >
      <div
        data-chart-data="[{"name":"Project A","completed":5,"ongoing":3}]"
        data-testid="bar-chart"
      >
        <div
          data-testid="cartesian-grid"
        />
        <div
          data-key="name"
          data-testid="x-axis"
        />
        <div
          data-testid="y-axis"
        />
        <div
          data-testid="tooltip"
        />
        <div
          data-testid="legend"
        />
        <div
          data-fill="#E776CB"
          data-name="Completed"
          data-testid="bar-completed"
        />
        <div
          data-fill="#5FD9FA"
          data-name="Ongoing"
          data-testid="bar-ongoing"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportChart Component using Snapshot renders correctly with several data entries: several data entries 1`] = `
<DocumentFragment>
  <div
    class="flex-1 min-w-[300px] p-4 border border[1px] bg-black/15 dark:bg-[#1c1c1c] rounded-lg h-[350px] relative"
    id="chart-2"
  >
    <div
      class="flex justify-between items-center mb-4"
    >
      <h3
        class="text-center text-xl text-black dark:text-white flex-1"
      >
        Multiple projects
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:text-accent-foreground h-8 w-8 hover:bg-transparent dark:hover:bg-gray-700"
          title="Download as CSV"
        >
          <svg
            class="lucide lucide-file-text h-4 w-4 text-black dark:text-gray-400 dark:hover:text-white m-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"
            />
            <polyline
              points="14 2 14 8 20 8"
            />
            <line
              x1="16"
              x2="8"
              y1="13"
              y2="13"
            />
            <line
              x1="16"
              x2="8"
              y1="17"
              y2="17"
            />
            <line
              x1="10"
              x2="8"
              y1="9"
              y2="9"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:text-accent-foreground h-8 w-8 hover:bg-transparent dark:hover:bg-gray-700"
          title="Download as PNG"
        >
          <svg
            class="lucide lucide-image h-4 w-4 text-black dark:text-gray-400 dark:hover:text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      data-testid="responsive-container"
    >
      <div
        data-chart-data="[{"name":"Project A","completed":5,"ongoing":3},{"name":"Project B","completed":10,"ongoing":7},{"name":"Project C","completed":2,"ongoing":1}]"
        data-testid="bar-chart"
      >
        <div
          data-testid="cartesian-grid"
        />
        <div
          data-key="name"
          data-testid="x-axis"
        />
        <div
          data-testid="y-axis"
        />
        <div
          data-testid="tooltip"
        />
        <div
          data-testid="legend"
        />
        <div
          data-fill="#E776CB"
          data-name="Completed"
          data-testid="bar-completed"
        />
        <div
          data-fill="#5FD9FA"
          data-name="Ongoing"
          data-testid="bar-ongoing"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
